--- a/angular.json
+++ b/angular.json
@@ -32,10 +32,17 @@
             ],
             "styles": [
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/styles.css"
-              
+              "./node_modules/ngx-toastr/toastr.css",
+              "src/styles.css",
+              "./node_modules/@fortawesome/fontawesome-free/css/fontawesome.min.css"
             ],
-            "scripts": []
+            "scripts": [
+              "./node_modules/jquery/dist/jquery.min.js",
+               "./node_modules/bootstrap/dist/js/bootstrap.min.js",
+               "./node_modules/"
+            ]
+
+            
           },
           "configurations": {
             "production": {
