--- a/package.json
+++ b/package.json
@@ -11,16 +11,23 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.2.11",
+    "@angular/animations": "^11.2.12",
+    "@angular/cdk": "^11.2.11",
     "@angular/common": "~11.2.11",
     "@angular/compiler": "~11.2.11",
     "@angular/core": "~11.2.11",
     "@angular/forms": "~11.2.11",
+    "@angular/material": "^11.2.11",
+    "@angular/material-moment-adapter": "^11.0.0",
     "@angular/platform-browser": "~11.2.11",
     "@angular/platform-browser-dynamic": "~11.2.11",
     "@angular/router": "~11.2.11",
+    "@fortawesome/fontawesome-free": "^5.15.3",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.0",
     "bootstrap": "^5.0.0-beta3",
     "jquery": "^3.6.0",
+    "ngx-mat-select-search": "^3.2.0",
+    "ngx-toastr": "^13.2.1",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
