--- a/package.json
+++ b/package.json
@@ -11,21 +11,22 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^11.2.12",
-    "@angular/cdk": "^11.2.11",
-    "@angular/common": "~11.2.11",
-    "@angular/compiler": "~11.2.11",
-    "@angular/core": "~11.2.11",
-    "@angular/forms": "~11.2.11",
-    "@angular/material": "^11.2.11",
+    "@angular/animations": "^11.2.13",
+    "@angular/cdk": "^11.2.12",
+    "@angular/common": "^11.2.13",
+    "@angular/compiler": "^11.2.13",
+    "@angular/core": "^11.2.13",
+    "@angular/forms": "^11.2.13",
+    "@angular/material": "^11.2.12",
     "@angular/material-moment-adapter": "^11.0.0",
-    "@angular/platform-browser": "~11.2.11",
-    "@angular/platform-browser-dynamic": "~11.2.11",
-    "@angular/router": "~11.2.11",
-    "@fortawesome/fontawesome-free": "^5.15.3",
+    "@angular/platform-browser": "^11.2.13",
+    "@angular/platform-browser-dynamic": "^11.2.13",
+    "@angular/router": "^11.2.13",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@ng-bootstrap/ng-bootstrap": "^9.1.0",
-    "bootstrap": "^5.0.0-beta3",
+    "bootstrap": "^5.0.0",
     "jquery": "^3.6.0",
+    "material-design-icons": "^3.0.1",
     "ngx-mat-select-search": "^3.2.0",
     "ngx-toastr": "^13.2.1",
     "popper.js": "^1.16.1",
@@ -34,12 +35,12 @@
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.10",
-    "@angular/cli": "~11.2.10",
-    "@angular/compiler-cli": "~11.2.11",
-    "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
+    "@angular-devkit/build-angular": "^0.1102.12",
+    "@angular/cli": "^11.2.12",
+    "@angular/compiler-cli": "^11.2.13",
+    "@types/jasmine": "^3.6.11",
+    "@types/node": "^12.20.12",
+    "codelyzer": "^6.0.2",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.1.0",
