--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@ng-bootstrap/ng-bootstrap": "^9.1.0",
     "bootstrap": "^5.0.0",
+    "chartist": "^0.11.4",
     "jquery": "^3.6.0",
     "material-design-icons": "^3.0.1",
+    "ng-chartist": "^4.1.0",
+    "ng-validate-equal": "^1.0.4",
     "ngx-mat-select-search": "^3.2.0",
     "ngx-toastr": "^13.2.1",
     "popper.js": "^1.16.1",
